--- a/ascii.html
+++ b/ascii.html
@@ -1,140 +1,54 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-<title>ASCIImation</title>
-
+<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+<title>CS472: ASCII Animation Viewer</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="ascii.css">
 <script src="ascii.js"></script>
 <script src="animations.js"></script>
 </head>
+	<body>
+		<header>CS472: ASCII Animation Viewer</header>
+			<textarea id="text-area" cols="80" rows="20"></textarea>
+			<fieldset>
+				<legend>Play Controls:</legend>
+				<button id="start">Start</button>
+				<button disabled="disabled" id="stop">Stop</button>
+			</fieldset>
+	
+			<fieldset>
+				<legend>Animation:</legend>
+				<select id="animation">
+					<option selected="selected" value="Blank">Blank</option>
+					<option value="Exercise">Exercise</option>
+					<option value="Juggler">Juggler</option>
+					<option value="Bike">Bike</option>
+					<option value="Dive">Dive</option>
+				</select>
+			</fieldset>
+			<fieldset>
+				<legend>Size:</legend>
+				<select id="fontsize">
+					<option value="7pt">Tiny</option>
+					<option value="10pt">Small</option>
+					<option value="12pt" selected="selected">Medium</option>
+					<option value="16pt">Large</option>
+					<option value="24pt">Extra Large</option>
+					<option value="32pt">XXL</option>
+				</select>
+			</fieldset>
+			<fieldset>
+				<legend>Speed:</legend>
+				<label><input id="turbo" type="checkbox">Turbo</label>
+			</fieldset>
+		</div>
+<div class="w3">
+	<a  href="https://validator.w3.org/check/?uri=https://lmekonnen.github.io/lidia.giithub.io/tmnt.html"><img src="w3c-html5.png" alt="Valid HTML5"></a>
+	<a href="http://jigsaw.w3.org/css-validator/validator?uri=https://lmekonnen.github.io/lidia.giithub.io/tmnt.html"><img src="w3c-css.png" alt="Valid CSS"></a>
 
-<body>
-<header>
-    CS 472 ASCII Animation Viewer
-</header>
-<textarea rows="20" cols="80"></textarea>
-<span>
-    <fieldset>
-        <legend>Play Controls:</legend>
-        <button onclick="animation()">Start</button>
-        <button>Stop</button>
-    </fieldset>
-    <fieldset>
-        <legend>Animation:</legend>
-        <select>
-            <option>BLANK</option>
-            <option>CUSTOM</option>
-            <option>EXERCISE</option>
-            <option>JUGGLAR</option>
-            <option>BIKE</option>
-            <option>DIVE</option>
-        </select>
-    </fieldset>
-    <fieldset>
-        <legend>Size</legend>
-        <select>
-            <option>Meduim</option>
-        </select>
-    </fieldset>
-    <fieldset>
-        <legend>Speed</legend>
-        <input type="checkbox"> Turbo
-    </fieldset>
-</span><br>
-<a class="w3" href="https://validator.w3.org/check/?uri=https://lmekonnen.github.io/lidia.giithub.io/tmnt.html"><img src="w3c-html5.png" alt="Valid HTML5"></a>
-        <a class="w33" href="http://jigsaw.w3.org/css-validator/validator?uri=https://lmekonnen.github.io/lidia.giithub.io/tmnt.html"><img src="w3c-css.png" alt="Valid CSS"></a>
+</div>
 
 
 </body>
-</html>
-
-// CSE 190 M, Homework 6: ASCIImation
-// This file contains the ASCII animations as large strings.
-//
-// You can refer to them by variable names such as blank or dive, or by indexes
-// into an array ANIMATIONS, such as ANIMATIONS["Bike"] or ANIMATIONS["Dive"].
-//
-// The former is probably more intuitive for new programmers, but the latter
-// may allow you to write more elegant code by indexing using the text of the
-// menu option selected in the HTML.  (See bottom of file.)
-//
-// (Hint: The array index you want is the same as the select box's selected value...)
-//
-// YOU SHOULD NOT EDIT THIS FILE IN ANY WAY.
-// TO ADD YOUR CUSTOM ANIMATION, CREATE YOUR OWN FILE myanimation.js AND
-// PUT YOUR CODE IN THERE.  In myanimation.js, it is legal for you to modify
-// the variables that have been declared in this file.
-
-
-
-
-// can also access the animations as an associative array / hash map,
-// such as ANIMATIONS["Bike"] or ANIMATIONS["Dive"] -->
-
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
-	<title>CS472: ASCII Animation Viewer</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link href="ascii.css" type="text/css" rel="stylesheet">
-	<script src="animations.js" ></script>
-	<script src="ascii.js"></script>
-</head>
-
-<body>
-	<header>CS472: ASCII Animation Viewer</header>
-	<div class="container">
-		<textarea id="text-area" cols="80" rows="20"></textarea>
-		<fieldset>
-			<legend>Play Controls:</legend>
-			<button id="start">Start</button>
-			<button disabled="disabled" id="stop">Stop</button>
-		</fieldset>
-
-		<fieldset>
-			<legend>Animation:</legend>
-			<select id="animation">
-				<option selected="selected" value="Blank">Blank</option>
-				<option value="Exercise">Exercise</option>
-				<option value="Juggler">Juggler</option>
-				<option value="Bike">Bike</option>
-				<option value="Dive">Dive</option>
-			</select>
-		</fieldset>
-		<fieldset>
-			<legend>Size:</legend>
-			<select id="fontsize">
-				<option value="7pt">Tiny</option>
-				<option value="10pt">Small</option>
-				<option value="12pt" selected="selected">Medium</option>
-				<option value="16pt">Large</option>
-				<option value="24pt">Extra Large</option>
-				<option value="32pt">XXL</option>
-			</select>
-		</fieldset>
-		<fieldset>
-			<legend>Speed:</legend>
-			<label><input id="turbo" type="checkbox">Turbo</label>
-		</fieldset>
-	</div>
-	<div id="validate">
-		<a href="https://validator.w3.org/nu/?doc=https://bereketyemane.github.io/W1D6/ascii.html">
-            <img src="https://manalabs.org/img/w3c-html.png" alt="Validator">
-        </a><br>
-        <a href="https://validator.w3.org/nu/?doc=https://bereketyemane.github.io/W1D6/ascii.css">
-            <img src="https://manalabs.org/img/w3c-css.png" alt="Validator">
-        </a><br>
-
-		<a href="http://mumstudents.org/jshint/check.php?uri=https://bereketyemane.github.io/W1D6/ascii.js">
-	    <img id="JHint" src="JsHint.png" alt="JavaScript Lint">
-		</a>
-			
-			<br>
-
-
-	</div>
-</body>
-
 </html>
