--- a/account.html
+++ b/account.html
@@ -9,9 +9,9 @@
 <body>
     <div style="border: 3px blue solid;margin: 10% 30% 0% 30%;padding: 20px;border-radius: 20px;">
         <h1>Module and Closure Lab</h1>
-        <label><b>Enter a Message</b></label>
+        <label><b>Account Name:</b></label>
         <input type="text" name="message" id="user_input"><br><br>
-        <label for="acct"><b>Type Of Account</b></label>
+        <label for="acct"><b>Type Of Account:</b></label>
         <select id="acctype" class="custom-select" required>
             <option selected value="business">business</option>
             <option value="checking">checking</option>
