--- a/Quiz2.html
+++ b/Quiz2.html
@@ -32,6 +32,8 @@
             $("li").each(function (idx) {
                 $(this).css('color', 'yellow');
             });
+
+            -> code 1 and code 3 are similiar  
         </pre>
 
     </p>
