--- a/index.html
+++ b/index.html
@@ -33,8 +33,11 @@
             <li><a href="module.js">lab9 Wednesday - Module Exercises</a></li><br>
             <li><a href="account.html">lab10 Thursday - Module and Closure Lab</a></li><br>
             <li><a href="maze.html">lab11 Saturday - Mouse Maze</a></li>
-            <li><a href="jQueryQuiz.html">lab11 Saturday - jQuery Quiz</a></li><br>
-            <li><a href="Quiz2.html">lab12 Monday - jQuery Quiz 2</a></li><br>
+            <li><a href="jQueryQuiz.html">lab11 Saturday - jQuery Quiz 1</a></li><br>
+            <li><a href="Quiz2.html">lab12 Monday - jQuery Quiz 2</a></li>
+            <li><a href="">lab12 Monday - DOM and Events (15 Puzzle)</a></li><br>
+            <li><a href="quiz3.html">lab13 Tuesday - jQuery Quiz 3</a></li><br>
+            <!-- <li><a href="Quiz2.html">lab12 Monday - jQuery Quiz 2</a></li><br> -->
             <li><a href="">Final Project</a></li>
         </ul>
 
