--- a/jQueryQuiz.html
+++ b/jQueryQuiz.html
@@ -1,10 +1,10 @@
-
 <html>
+
 <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script>
         $(document).ready(function () {
-            $("button").click(function(){
+            $("button").click(function () {
                 $("div h1").css("background-color", "red");
                 $('p').append("YES");
             });
@@ -13,16 +13,47 @@
     </script>
 </head>
 <body>
-    <h1>Question1: The difference between the “jQuery function” and the “jQuery object” is</h1>
-    <h1>abc</h1><br>
-    <div>
-        <h1>div-1</h1>
-        <h1>div-2</h1>
-    </div>
-    <h1>xyz</h1>
-    <p>Is jQuery FUN or what? </p>
+    <pre>
+<h3>Question1: In jQuery terminology, what is the difference between the “jQuery function” and the “jQuery object”? 
+    -> The difference between the “jQuery function” and the “jQuery object” is<br>
+Question2: Write jQuery code to find all h1 elements that are children of a div element and make their background
+    color red.
+    Sample HTML:    
+&lt;body&gt;
+    &lt;h1&gt;abc&lt;/h1&gt;&lt;br&gt;
+    &lt;div&gt;
+        &lt;h1&gt;div-1&lt;/h1&gt;
+        &lt;h1&gt;div-2&lt;/h1&gt;
+    &lt;/div&gt;
+    &lt;h1&gt;xyz&lt;/h1&gt;
+&lt;body&gt;
+Answer:
+<h1>abc</h1>
+<div>
+    <h1>div-1</h1>
+    <h1>div-2</h1>
+</div>
+<h1>xyz</h1>
+</h3>
+<h3>
+Question3:Use a jQuery method to insert the text "YES!" at the end of the &lt;p&gt; element.
+    &lt;!DOCTYPE html&gt;
+    &lt;html&gt;
+        &lt;head&gt;
+            &lt;script&gt;
+            $(document).ready(function () {
+                $("button").click(function () {
+                    $("div h1").css("background-color", "red");
+                    $('p').append("YES");
+                });
+            });
+            &lt;/script&gt;
+        &lt;/head&gt;
+        &lt;body&gt;
+            <p>Is jQuery FUN or what? </p>  
     <button>Click me</button>
- 
+</h3>
+    </pre>
 </body>
 
 </html>
