--- a/selu.html
+++ b/selu.html
@@ -4,7 +4,7 @@
 <head>
     <title>🎂🎂Selu birthday🎂🎂</title>
 
-
+    <link href="http://fonts.cdnfonts.com/css/poem-letters-serif" rel="stylesheet">
     <script src="http://ajax.googleapis.com/ajax/libs/prototype/1.7.0.0/prototype.js"
             type="text/javascript"></script>
      <script src="http://www.cs.washington.edu/education/courses/cse190m/12sp/homework/7/grading.js"
@@ -13,16 +13,20 @@
     <link href="selu.css" type="text/css" rel="stylesheet" />
     <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js" integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
     <script src="selu.js" type="text/javascript"></script>
-
+    <style>
+        @import url('http://fonts.cdnfonts.com/css/poem-letters-serif');
+        </style>
 </head>
 
 <body>
     <div class=body>
 <h1>🎂Happy Birthday Seluye myFR🎂</h1>
 
-
+<div>
     💞ኣብዛ ብርኽቲ መዓልቲ ብልጽቲ ህያብ ንዝሃበና እግዚአብሔር ይመስገን💞<br> 
     😇😇2ይ ቆሮ 9-15 ስለቲ ዘይንገር ውህበቱ ንአምላኽ ስብሓት ይኹኖ!!😇😇
+</div>
+    
 
 
 <div id="puzzlearea">
