--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <li><a href="aboutme/aboutme.html">lab2 Tuesday- About me</a></li>
             <li><a href="pie/pie.html">lab2 Tuesday - Recipe</a></li><br>
             <li><a href="movie/tmnt.html">lab3 Wednesday- Movie Review</a></li><br>
-            <li><a href="form.html">lab4 Thursday - Grades Exercise</a></li>
+            <li><a href="decorateMyText/form.html">lab4 Thursday - Grades Exercise</a></li>
             <li><a href="nurdLuv/signup.html">lab4 Thursday - NurdLuv</a></li><br>
             <li><a href="exercise/click.html">lab5 Friday - onClick Alert & JavaScript Exercises</a></li>
             <li><a href="calculator/calculator.html">lab5 Friday - Calculator Tip</a></li><br>
