--- a/puzzle/fifteen.html
+++ b/puzzle/fifteen.html
@@ -46,15 +46,11 @@
 </p>
 
 <div id="validation">
-    <a href="https://validator.w3.org/check/referer">
-        <img alt="Valid HTML!" src="w3c-html.png"/>
-    </a>
-    <a href="https://jigsaw.w3.org/css-validator/check/referer">
-        <img alt="Valid CSS!" src="w3c-css.png"/>
-    </a>
-    <a href="https://webster.cs.washington.edu/jslint/?referer">
-        <img src="w3c-js.png" alt="JS CHECK!" />
-    </a>
+    <a href="https://validator.w3.org/check/?uri=https://lmekonnen.github.io/lidia.giithub.io/index.html"><img
+        src="../w3c-html5.png" alt="Valid HTML5"></a>
+<a
+    href="http://jigsaw.w3.org/css-validator/validator?uri=https://lmekonnen.github.io/lidia.giithub.io/index.html"><img
+        src="../w3c-css.png" alt="Valid CSS"></a>
 
 </div>
 </body>
