--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
             <li><a href="exercise/Quiz2.html">lab12 Monday - jQuery Quiz 2</a></li>
             <li><a href="puzzle/fifteen.html">lab12 Monday - DOM and Events (15 Puzzle)</a></li><br>
             <li><a href="exercise/quiz3.html">lab13 Tuesday - jQuery Quiz 3</a></li><br>
-            <li><a href="NodeJs/N1.js">lab14 Wednesday - N1 exercise</a></li><br>
-            <li><a href="NodeJs/N2.js">lab14 Wednesday - N2 exercise</a></li><br>
-            <li><a href="NodeJs/N3.js">lab14 Wednesday - N3 exercise</a></li><br>
+            <li><a href="NodeJs/N1.js">lab14 Wednesday - N1 exercise</a></li>
+            <li><a href="NodeJs/N2.js">lab14 Wednesday - N2 exercise</a></li>
+            <li><a href="NodeJs/N3.js">lab14 Wednesday - N3 exercise</a></li>
             <li><a href="NodeJs/N4.js">lab14 Wednesday - N4 exercise</a></li><br>
             <li><a href="NodeJs/Calculator/calculator.html">lab15 Thursday - Simple Calculator Lab</a></li><br>
-            <li><a href="NodeJs/node.html">lab14 Wednesday - N4 exercise</a></li><br>
+            <li><a href="NodeJs/node.html">lab16 Friday - Number Quiz</a></li><br>
             <li><a href="">Final Project</a></li>
         </ul>
 
